<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="roundBracket">()</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="number9">9</string>
    <string name="number8">8</string>
    <string name="number7">7</string>
    <string name="number6">6</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="minus">-</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="result">=</string>

    <string name="close">닫기</string>
    <string name="clearCalculationHistory">계산기록 삭제</string>
</resources>
